--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <title>rock-paper-scissors</title>
+
     <link rel="stylesheet" href="index.css" />
+    <title>rock-paper-scissors</title>
   </head>
   <body>
     <div class="game-container">
       <div class="computer-section">
         <div class="top-displays">
           <div class="author-display">
-            <h2>&copy;</h2>
+            <h2>&copy; 2025</h2>
             <a href="http://github.com/Anthony-muhoro" target="_blank"
               >Anthony Muhoro</a
             >
@@ -29,28 +30,37 @@
               <span class="computer-score">0</span>
             </div>
             <div class="player-scores-display">
-              <span class="player-score">1</span>
+              <span class="player-score">0</span>
               <h2>Player</h2>
             </div>
           </div>
         </div>
-        <div class="computer-oponent">
+        <div class="player-comp">
           <h2>Computer</h2>
-          <div id="player-selection">✌️</div>
+          <div id="computerselection">✌️</div>
         </div>
       </div>
       <div class="who-won">
         <h1 class="winner-display" id="winner-show-display">currently draw</h1>
       </div>
       <div class="player-section">
-        <div class="computer-oponent">
+        <div class="player-comp">
           <h2>Player</h2>
-          <div id="player-selection">✌️</div>
+          <div id="playerSelection">✌️</div>
         </div>
         <div class="play-options">
-          <div id="rock">✊</div>
-          <div id="paper">✋</div>
-          <div id="scissors">✌️</div>
+          <div id="options">
+            <li>✊</li>
+            <p>rock</p>
+          </div>
+          <div id="option">
+            <li>✋</li>
+            <p>paper</p>
+          </div>
+          <div id="option">
+            <li>✌️</li>
+            <p>Scissors</p>
+          </div>
         </div>
       </div>
     </div>
